--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li><a href="index.html" class="nav-link active">BILLING</a></li>
         <li><a href="data-table.html" class="nav-link">CASE INFO</a></li>
       </ul>
+      <div class="navbar-bottom">
+        <a href="#" id="logoutBtn" class="nav-link">LOGOUT</a>
+      </div>
     </nav>
     <main>
       <div id="notes-page" class="page active">
