--- a/data-table.html
+++ b/data-table.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar">
       <ul>
-        <li><a href="index.html" class="nav-link">BILLING</a></li>
+        <li><a href="billing.html" class="nav-link">BILLING</a></li>
         <li><a href="data-table.html" class="nav-link active">CASE INFO</a></li>
       </ul>
       <div class="navbar-bottom">
