--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home - Billing Time Tracker</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./public/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
+    <script src="/js/index.js"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -18,18 +19,34 @@
         <li>
           <a href="./pages/data-table.html" class="nav-link">CASE INFO</a>
         </li>
+        <li>
+          <a href="./pages/email_templates.html" class="nav-link"
+            >EMAIL TEMPLATES</a
+          >
+        </li>
+        <li>
+          <a href="./pages/password-generator.html" class="nav-link"
+            >PASSWORD GENERATOR</a
+          >
+        </li>
       </ul>
     </nav>
     <main>
       <div id="home-page" class="page active">
-        <h1>Welcome to Billing Time Tracker</h1>
-        <p>Select a tab above to get started:</p>
+        <h1>Welcome to my personal work organization tool</h1>
+        <p>Select a tab on the left to get started:</p>
         <ul>
           <li><strong>BILLING:</strong> Track your billable hours</li>
           <li><strong>CASE INFO:</strong> Manage case information</li>
+          <li>
+            <strong>EMAIL TEMPLATES:</strong> Create and manage email templates
+          </li>
+          <li>
+            <strong>PASSWORD GENERATOR:</strong> Generate secure passwords
+          </li>
         </ul>
       </div>
     </main>
-    <script src="./js/script.js"></script>
+    <script src="./public/js/index.js"></script>
   </body>
 </html>
