--- a/index.html
+++ b/index.html
@@ -4,28 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="./public/css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="/personal-record-keeping/public/css/styles.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <script src="/js/index.js"></script>
+    <script src="/personal-record-keeping/public/js/index.js"></script>
   </head>
   <body>
     <nav class="navbar">
       <ul>
-        <li><a href="index.html" class="nav-link active">HOME</a></li>
-        <li><a href="./pages/billing.html" class="nav-link">BILLING</a></li>
         <li>
-          <a href="./pages/data-table.html" class="nav-link">CASE INFO</a>
+          <a href="/personal-record-keeping/index.html" class="nav-link active"
+            >HOME</a
+          >
         </li>
         <li>
-          <a href="./pages/email_templates.html" class="nav-link"
+          <a href="/personal-record-keeping/pages/billing.html" class="nav-link"
+            >BILLING</a
+          >
+        </li>
+        <li>
+          <a
+            href="/personal-record-keeping/pages/data-table.html"
+            class="nav-link"
+            >CASE INFO</a
+          >
+        </li>
+        <li>
+          <a
+            href="/personal-record-keeping/pages/email_templates.html"
+            class="nav-link"
             >EMAIL TEMPLATES</a
           >
         </li>
         <li>
-          <a href="./pages/password-generator.html" class="nav-link"
+          <a
+            href="/personal-record-keeping/pages/password-generator.html"
+            class="nav-link"
             >PASSWORD GENERATOR</a
           >
         </li>
@@ -47,6 +66,6 @@
         </ul>
       </div>
     </main>
-    <script src="./public/js/index.js"></script>
+    <script src="/personal-record-keeping/public/js/index.js"></script>
   </body>
 </html>
