--- a/pages/billing.html
+++ b/pages/billing.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Billing</title>
-    <link rel="stylesheet" href="../public/css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="/personal-record-keeping/public/css/styles.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -13,14 +16,36 @@
   <body>
     <nav class="navbar">
       <ul>
-        <li><a href="../index.html" class="nav-link">HOME</a></li>
-        <li><a href="./billing.html" class="nav-link active">BILLING</a></li>
-        <li><a href="./data-table.html" class="nav-link">CASE INFO</a></li>
         <li>
-          <a href="./email_templates.html" class="nav-link">EMAIL TEMPLATES</a>
+          <a href="/personal-record-keeping/index.html" class="nav-link"
+            >HOME</a
+          >
         </li>
         <li>
-          <a href="./password-generator.html" class="nav-link"
+          <a
+            href="/personal-record-keeping/pages/billing.html"
+            class="nav-link active"
+            >BILLING</a
+          >
+        </li>
+        <li>
+          <a
+            href="/personal-record-keeping/pages/data-table.html"
+            class="nav-link"
+            >CASE INFO</a
+          >
+        </li>
+        <li>
+          <a
+            href="/personal-record-keeping/pages/email_templates.html"
+            class="nav-link"
+            >EMAIL TEMPLATES</a
+          >
+        </li>
+        <li>
+          <a
+            href="/personal-record-keeping/pages/password-generator.html"
+            class="nav-link"
             >PASSWORD GENERATOR</a
           >
         </li>
@@ -67,6 +92,6 @@
         </div>
       </div>
     </main>
-    <script src="../public/js/billing.js"></script>
+    <script src="/personal-record-keeping/public/js/billing.js"></script>
   </body>
 </html>
