--- a/pages/password-generator.html
+++ b/pages/password-generator.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="../public/css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="/personal-record-keeping/public/css/styles.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -62,6 +65,6 @@
         </div>
       </div>
     </main>
-    <script src="../public/js/password-generator.js"></script>
+    <script src="/personal-record-keeping/public/js/password-generator.js"></script>
   </body>
 </html>
