--- a/pages/email_templates.html
+++ b/pages/email_templates.html
@@ -4,52 +4,115 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Email Templates</title>
-    <link
-      rel="stylesheet"
-      href="/personal-record-keeping/public/css/styles.css"
-    />
+    <link rel="stylesheet" href="../public/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
+    <link rel="stylesheet" href="../public/css/email-templates.css" />
   </head>
   <body>
     <nav class="navbar">
       <ul>
         <li>
-          <a href="/personal-record-keeping/index.html" class="nav-link"
-            >HOME</a
-          >
+          <a href="../index.html" class="nav-link">HOME</a>
         </li>
         <li>
-          <a href="/personal-record-keeping/pages/billing.html" class="nav-link"
-            >BILLING</a
-          >
+          <a href="billing.html" class="nav-link">BILLING</a>
         </li>
         <li>
-          <a
-            href="/personal-record-keeping/pages/data-table.html"
-            class="nav-link"
-            >CASE INFO</a
-          >
+          <a href="data-table.html" class="nav-link">CASE INFO</a>
         </li>
         <li>
-          <a
-            href="/personal-record-keeping/pages/email_templates.html"
-            class="nav-link active"
-            >EMAIL TEMPLATES</a
-          >
+          <a href="email_templates.html" class="nav-link">EMAIL TEMPLATES</a>
         </li>
         <li>
-          <a
-            href="/personal-record-keeping/pages/password-generator.html"
-            class="nav-link"
+          <a href="password-generator.html" class="nav-link"
             >PASSWORD GENERATOR</a
           >
         </li>
+        <li>
+          <a href="ftk_history.html" class="nav-link">FTK HISTORY</a>
+        </li>
+        <li>
+          <a href="rel_history.html" class="nav-link">RELATIVITY HISTORY</a>
+        </li>
       </ul>
     </nav>
-    <!-- Rest of the content remains the same -->
-    <script src="/personal-record-keeping/public/js/email-templates.js"></script>
+    <main>
+      <h1>Email Templates</h1>
+      <button id="addTemplateBtn" class="action-btn">Add Template</button>
+      <hr class="divider" />
+      <div id="templateContainer"></div>
+      <div class="file-controls file-controls-email-templates">
+        <button id="exportTemplatesBtn" class="action-btn">
+          <i class="fas fa-download"></i> Export Templates
+        </button>
+        <input
+          type="file"
+          id="importTemplatesBtn"
+          accept=".json"
+          style="display: none"
+        />
+        <button
+          onclick="document.getElementById('importTemplatesBtn').click()"
+          class="action-btn"
+        >
+          <i class="fas fa-upload"></i> Import Templates
+        </button>
+      </div>
+    </main>
+
+    <!-- Add Template Modal -->
+    <div id="addTemplateModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Add New Template</h2>
+        <form id="addTemplateForm">
+          <input
+            type="text"
+            id="templateTitle"
+            placeholder="Template Title"
+            required
+          />
+          <textarea
+            id="templateContent"
+            placeholder="Enter your email template here..."
+            required
+          ></textarea>
+          <button type="submit" class="action-btn">Submit Template</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- View Template Modal -->
+    <div id="viewTemplateModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2 id="viewTemplateTitle"></h2>
+        <div id="viewTemplateContent" class="template-content"></div>
+        <div class="copy-container">
+          <button id="copyTemplateBtn" class="copy-btn">Copy Template</button>
+          <span id="copyInfo" class="copy-info">Template copied!</span>
+        </div>
+      </div>
+    </div>
+
+    <script src="../public/js/email-templates.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const currentPage = window.location.pathname.split("/").pop();
+        const navLinks = document.querySelectorAll(".nav-link");
+        navLinks.forEach((link) => {
+          link.classList.remove("active");
+          if (
+            link.getAttribute("href").includes(currentPage) ||
+            (currentPage === "" && link.getAttribute("href") === "index.html")
+          ) {
+            link.classList.add("active");
+          }
+        });
+      });
+    </script>
   </body>
 </html>
