--- a/index.html
+++ b/index.html
@@ -4,48 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link
-      rel="stylesheet"
-      href="/personal-record-keeping/public/css/styles.css"
-    />
+    <link rel="stylesheet" href="public/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <script src="/personal-record-keeping/public/js/index.js"></script>
   </head>
   <body>
     <nav class="navbar">
       <ul>
         <li>
-          <a href="/personal-record-keeping/index.html" class="nav-link active"
-            >HOME</a
-          >
+          <a href="index.html" class="nav-link active">HOME</a>
         </li>
         <li>
-          <a href="/personal-record-keeping/pages/billing.html" class="nav-link"
-            >BILLING</a
-          >
+          <a href="pages/billing.html" class="nav-link">BILLING</a>
         </li>
         <li>
-          <a
-            href="/personal-record-keeping/pages/data-table.html"
-            class="nav-link"
-            >CASE INFO</a
-          >
+          <a href="pages/data-table.html" class="nav-link">CASE INFO</a>
         </li>
         <li>
-          <a
-            href="/personal-record-keeping/pages/email_templates.html"
-            class="nav-link"
+          <a href="pages/email_templates.html" class="nav-link"
             >EMAIL TEMPLATES</a
           >
         </li>
         <li>
-          <a
-            href="/personal-record-keeping/pages/password-generator.html"
-            class="nav-link"
+          <a href="pages/password-generator.html" class="nav-link"
             >PASSWORD GENERATOR</a
+          >
+        </li>
+        <li>
+          <a href="pages/ftk_history.html" class="nav-link">FTK HISTORY</a>
+        </li>
+        <li>
+          <a href="pages/rel_history.html" class="nav-link"
+            >RELATIVITY HISTORY</a
           >
         </li>
       </ul>
@@ -66,6 +58,21 @@
         </ul>
       </div>
     </main>
-    <script src="/personal-record-keeping/public/js/index.js"></script>
+    <script src="public/js/index.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const currentPage = window.location.pathname.split("/").pop();
+        const navLinks = document.querySelectorAll(".nav-link");
+        navLinks.forEach((link) => {
+          link.classList.remove("active");
+          if (
+            link.getAttribute("href").includes(currentPage) ||
+            (currentPage === "" && link.getAttribute("href") === "index.html")
+          ) {
+            link.classList.add("active");
+          }
+        });
+      });
+    </script>
   </body>
 </html>
