--- a/pages/rel_history.html
+++ b/pages/rel_history.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Password Generator</title>
+    <title>Relativity History</title>
     <link rel="stylesheet" href="../public/css/styles.css" />
     <link
       rel="stylesheet"
@@ -38,49 +38,8 @@
         </li>
       </ul>
     </nav>
-    <main>
-      <div id="password-generator-page" class="page active">
-        <h1>Password Generator</h1>
-        <div class="password-generator-container">
-          <div class="form-group">
-            <label for="passwordLength"
-              >Password Length: <span id="lengthValue">16</span></label
-            >
-            <input
-              type="range"
-              id="passwordLength"
-              min="12"
-              max="20"
-              value="16"
-            />
-          </div>
-          <div class="form-group">
-            <label>
-              <input type="checkbox" id="specialChars" checked />
-              Include Special Characters
-            </label>
-          </div>
-          <div class="form-group">
-            <label for="generatedPassword">Generated Password:</label>
-            <div class="password-input-group">
-              <input
-                type="text"
-                id="generatedPassword"
-                readonly
-                placeholder="Your secure password"
-              />
-              <button id="copyPassword" title="Copy to clipboard">
-                <i class="fas fa-copy"></i>
-              </button>
-            </div>
-          </div>
-          <button id="generatePassword">
-            <i class="fas fa-key"></i> Generate Password
-          </button>
-        </div>
-      </div>
-    </main>
-    <script src="../public/js/password-generator.js"></script>
+    <!-- Rest of the content remains the same -->
+    <script src="../public/js/rel_history.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const currentPage = window.location.pathname.split("/").pop();
